# Field_LFNV

./: README.md
linear_field_nav/: CMakeLists.txt  package.xml  requirements.txt
linear_field_nav/launch/: linear_navigation.launch.py
linear_field_nav/scripts/: crop_prediction.py  mpc_trajectory_tracking.py  odom_reset_node.py  reference_path.py  row_manager_fsm.py
meshes/very_low/: plant_3.stl
models/field_ground_plane/: model.config  model.sdf
models/field_ground_plane/materials/scripts/: field_ground_plane.material
worlds/: linear_field.sdf
